--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img src="images/images 2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="images/images 3.jpg" class="d-block w-100" alt="...">
+            <img class="images-carousel" src="images/images 3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -63,73 +63,73 @@
 
     <div class="section-card">
         <div class="card" style="width: 15rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/card 1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card" style="width: 15rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/card 2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card" style="width: 15rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/card 3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card" style="width: 15rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/card 4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card" style="width: 15rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/card 5.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card" style="width: 15rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/card 6.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card" style="width: 15rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/card 7.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card" style="width: 15rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/card 8.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card" style="width: 15rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/card 9.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card" style="width: 15rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/card 10.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card" style="width: 15rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/card 11.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card" style="width: 15rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/card 12.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
@@ -141,8 +141,6 @@
             Todos los derechos reservados.
         </div>
     </footer>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
       crossorigin="anonymous"></script>
